# fitter

./: README.md  pyproject.toml
src/fitter/: __init__.py  functions.py  linear.py
